OPA-PoC/constraints/psp-host-filesystem.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostFilesystem
metadata:
  name: psp-host-filesystem
spec:
  match:
    scope: Namespaced
    namespaces: ["restricted"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
