OPA-PoC/constraints/psp-host-network-ports.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPSPHostNetworkingPorts
metadata:
  name: psp-host-network-ports
spec:
  match:
    scope: Namespaced
    namespaces: ["restricted"]
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
